--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -31,7 +31,7 @@
 
                   <div class="mb-3">
                       <label class="form-label" for="description">Description</label><br>
-                      <textarea class="form-control" type="text" name="campground[description]" id="image" placeholder="Enter description" required></textarea>
+                      <textarea class="form-control" type="text" name="campground[description]" id="description" placeholder="Enter description" required></textarea>
                       <div class="valid-feedback">Looks good</div>
                   </div>
 
